--- a/.github/workflows/deploy-h5.yml
+++ b/.github/workflows/deploy-h5.yml
@@ -7,8 +7,6 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,7 +25,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: build h5
-        run: npm run build:h5
+        run: |
+          npm install
+          npm run build:h5
 
       # Runs a set of commands using the runners shell
       - name: copy files to doc
