--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ts-uniapp",
-    "appid": "",
+    "appid": "__UNI__50C4AFB",
     "description": "",
     "versionName": "1.0.0",
     "versionCode": "100",
