微信登录，微信绑定当前用户

--- a/src/uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id/config.json
+++ b/src/uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id/config.json
@@ -20,8 +20,8 @@
 	"mp-weixin": {
 		"oauth" : {
 			"weixin" : {
-				"appid" : "wxc137fb66655a305a",
-				"appsecret" : "b46e6f0767acb6107e8aaea07ab72bc0"
+				"appid" : "wxf629fa997299f5da",
+				"appsecret" : "26d1babe6d31912f69e2be72d708936c"
 			}
 		}
 	},
