--- a/.github/workflows/deploy-h5.yml
+++ b/.github/workflows/deploy-h5.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           REPOSITORY_NAME: mikexfreeze/wealth-freedom-page
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: dist/build/h5 # The folder the action should deploy.
