--- a/.github/workflows/deploy-h5.yml
+++ b/.github/workflows/deploy-h5.yml
@@ -34,5 +34,5 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.PAT }}
           REPOSITORY_NAME: mikexfreeze/wealth-freedom-page
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: dist/build/h5 # The folder the action should deploy.
+          FOLDER: src # The folder the action should deploy.
           CLEAN: true 
