--- a/.github/workflows/deploy-h5.yml
+++ b/.github/workflows/deploy-h5.yml
@@ -29,10 +29,10 @@ jobs:
 #           npm run build:h5
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
-          ACCESS_TOKEN: ${{ secrets.PAT }}
-          REPOSITORY_NAME: mikexfreeze/wealth-freedom-page
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: src # The folder the action should deploy.
-          CLEAN: true 
+          token: ${{ secrets.PAT }}
+          repositoryName: mikexfreeze/wealth-freedom-page
+          branch: gh-pages # The branch the action should deploy to.
+          folder: src # The folder the action should deploy.
+          clean: true 
